--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@mantine/core": "^7.2.1",
     "@mantine/hooks": "^7.2.1",
+    "gantt-task-react": "^0.3.9",
+    "install": "^0.13.0",
+    "npm": "^10.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
